# balgrist-calib-move

./: README.md  pyproject.toml  requirements.txt
calib_move/: __init__.py  main.py
calib_move/config/: plotconfig.py
calib_move/core/: cliargs.py  config.py  containers.py  gather.py  generatejson.py  homographies.py  plotting.py  videocontainer.py  vidstats.py
calib_move/util/: generatejson.py  imgblending.py  jsonio.py  output.py  plot.py  timestring.py
scripts/: run.py  run_gen_window_template_json.py  run_template_json.py  static_window_template.json
tests/: test_cliargs.py  test_config.py  test_gather_vids.py  test_gen_template_json.py  test_json.py  test_main.py  test_plots.py  test_static_window_template.json  test_time_string.py
